--- a/index.html
+++ b/index.html
@@ -5,93 +5,33 @@
   </head>
   <body>
     <main id="main">
-      <h1 id="title">Dr. Norman Borlaug</h1>
-      <p>The man who saved a billion lives</p>
+      <h1 id="title">Viktor Emil Frankl</h1>
+      <p>"Tudo pode ser tirado de um homem, menos uma coisa: a última das liberdades humanas - escolher a atitude em qualquer conjunto de circunstâncias, escolher o próprio caminho" (Victor E. Frankl ).</p>
       <figure id="img-div">
-        <img
-          id="image"
-          src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg"
-          alt="Dr. Norman Borlaug seen standing in Mexican wheat field with a group of biologists"
-        />
-        <figcaption id="img-caption">
-          Dr. Norman Borlaug, third from the left, trains biologists in Mexico
-          on how to increase wheat yields - part of his life-long war on hunger.
-        </figcaption>
+        <img id="image" src="https://s.ebiografia.com/img/vi/kt/viktor_frankl_purpose_of_life_c.jpg?auto_optimize=low&width=655">
+      <figcaption id="img-caption">Viktor Emil Frankl foi um neuropsiquiatra austríaco e fundador da terceira escola vienense de psicoterapia, a Logoterapia e Análise Existencial.</figcaption>
+        
+        
       </figure>
       <section id="tribute-info">
-        <h3 id="headline">Here's a time line of Dr. Borlaug's life:</h3>
+        <h2 id="headline">Abaixo, temos uma linha do tempo da vida de Frankl. É muito interessante o fato de que ele passou por tantas dificuldades, e ainda assim ser capaz de seguir em frente com sua vida; Encontrar felicidade e sucesso.</h2>
         <ul>
-          <li><strong>1914</strong> - Born in Cresco, Iowa</li>
-          <li>
-            <strong>1933</strong> - Leaves his family's farm to attend the
-            University of Minnesota, thanks to a Depression era program known as
-            the "National Youth Administration"
-          </li>
-          <li>
-            <strong>1935</strong> - Has to stop school and save up more money.
-            Works in the Civilian Conservation Corps, helping starving
-            Americans. "I saw how food changed them", he said. "All of this left
-            scars on me."
-          </li>
-          <li>
-            <strong>1937</strong> - Finishes university and takes a job in the
-            US Forestry Service
-          </li>
-          <li>
-            <strong>1938</strong> - Marries wife of 69 years Margret Gibson.
-            Gets laid off due to budget cuts. Inspired by Elvin Charles Stakman,
-            he returns to school study under Stakman, who teaches him about
-            breeding pest-resistent plants.
-          </li>
-          <li>
-            <strong>1941</strong> - Tries to enroll in the military after the
-            Pearl Harbor attack, but is rejected. Instead, the military asked
-            his lab to work on waterproof glue, DDT to control malaria,
-            disinfectants, and other applied science.
-          </li>
-          <li>
-            <strong>1942</strong> - Receives a Ph.D. in Genetics and Plant
-            Pathology
-          </li>
-          <li>
-            <strong>1944</strong> - Rejects a 100% salary increase from Dupont,
-            leaves behind his pregnant wife, and flies to Mexico to head a new
-            plant pathology program. Over the next 16 years, his team breeds
-            6,000 different strains of disease resistent wheat - including
-            different varieties for each major climate on Earth.
-          </li>
-          <li>
-            <strong>1945</strong> - Discovers a way to grown wheat twice each
-            season, doubling wheat yields
-          </li>
-          <li>
-            <strong>1953</strong> - crosses a short, sturdy dwarf breed of wheat
-            with a high-yeidling American breed, creating a strain that responds
-            well to fertilizer. It goes on to provide 95% of Mexico's wheat.
-          </li>
-          <li>
-            <strong>1962</strong> - Visits Delhi and brings his high-yielding
-            strains of wheat to the Indian subcontinent in time to help mitigate
-            mass starvation due to a rapidly expanding population
-          </li>
-          <li><strong>1970</strong> - receives the Nobel Peace Prize</li>
-          <li>
-            <strong>1983</strong> - helps seven African countries dramatically
-            increase their maize and sorghum yields
-          </li>
-          <li>
-            <strong>1984</strong> - becomes a distinguished professor at Texas
-            A&M University
-          </li>
-          <li>
-            <strong>2005</strong> - states "we will have to double the world
-            food supply by 2050." Argues that genetically modified crops are the
-            only way we can meet the demand, as we run out of arable land. Says
-            that GM crops are not inherently dangerous because "we've been
-            genetically modifying plants and animals for a long time. Long
-            before we called it science, people were selecting the best breeds."
-          </li>
-          <li><strong>2009</strong> - dies at the age of 95.</li>
+            <li>1905: Viktor Frankl nasceu em 26 de março, em Viena. Era o segundo de três filhos.</li>
+            <li>1914-1918: Durante a Primeira Guerra Mundial, sua família experimenta amargas privações.</li>
+            <li>1915-1923: Durante seus anos de ensino médio, Frankl lê ansiosamente os "Filósofos da Natureza" e assiste a palestras públicas sobre Psicologia Aplicada. Entra em contato com a Psicanálise.</li>
+            <li>1921: Primeira palestra pública de Frankl: "Sobre o sentido da vida". Torna-se funcionário da Juventude Operária Socialista.</li>
+            <li>1923: Ensaio de conclusão de curso do ensino médio: "Sobre a psicologia do pensamento filosófico" (um estudo de orientação psicanalítica sobre Arthur Schopenhauer). Primeiras publicações na seção juvenil de um jornal diário; intensa correspondência com Sigmund Freud.</li>
+            <li>1924: O ensaio de Frankl "Sobre os movimentos mímicos de afirmação e negação" é publicado no "International Journal of Psychoanalysis". Frankl estuda medicina e atua como porta-voz da Associação Austríaca de Estudantes Socialistas do Ensino Médio. Um ano depois, conheceu Freud pessoalmente, mas envolveu-se cada vez mais com Alfred Adler.</li>
+            <li>1925: O artigo de Frankl "Psychotherapy and Weltanschauung" é publicado no "International Journal of Individual Psychology". Ele se esforça para explorar a fronteira entre psicoterapia e filosofia, concentrando-se na questão fundamental do significado e dos valores – um tópico que se tornará o leitmotiv de sua obra de vida.</li>
+            <li>1926: Frankl apresenta palestras públicas em congressos em Duesseldorf, Frankfurt, Berlim; pela primeira vez ele usa a palavra LOGOTERAPIA.</li>
+            <li>1927: Seu relacionamento com Alfred Adler estava em declínio. Frankl se envolve com Rudolf Allers e Oswald Schwarz (o fundador da medicina psicossomática). Ele é entusiasta do livro de Max Scheler "Formalismo em Ética e Ética Não-formal de Valores". Contra sua intenção, ele é excluído do círculo de Adler. A filha de Adler, Alexandra, Rudolf Dreikurs e outros adlerianos importantes mantêm relações amistosas com ele.</li>
+            <li>1928 – 1929: Em Viena e em outras seis cidades europeias, Frankl organiza centros de aconselhamento juvenil onde adolescentes necessitados podem obter aconselhamento e ajuda gratuitamente. Psicólogos individuais como Charlotte Buehler e Erwin Wexberg se juntam ao projeto de Frankl, e o professor de anatomia e vereador de Viena Julius Tandler fornece apoio financeiro.</li>
+            <li>1930: Ele organiza um programa especial de aconselhamento no final do período escolar, onde, pela primeira vez em anos, nenhum suicídio de estudante ocorre em Viena. Frankl ganha atração internacional: Wilhelm Reich o convida para ir a Berlim, as universidades de Praga e Budapeste o querem para dar aulas. No Centro de Educação de Adultos apresenta um curso sobre higiene psicológica. Pouco antes de se formar, começa a trabalhar no Departamento de Psicoterapia da Clínica Universitária de Psiquiatria; após o doutorado, é promovido a "Assistente".</li>
+            <li>1931 – 1932: Frankl obtém treinamento em neurologia. Trabalha na "Maria Theresien Schloessl" em Viena.</li>
+            <li>1933 – 1937: Frankl torna-se chefe do "Pavilhão Feminino Suicida" no Hospital Psiquiátrico de Viena, com cerca de 3000 pacientes anualmente passando por suas mãos.</li>
+            <li>1937: Frankl abre um consultório como Doutor em Neurologia e Psiquiatria.</li>
+            <li>1938: Invasão da Áustria pelas tropas de Hitler – o "Anschluss".</li>
+            <li>1939: Em seu artigo: "FILOSOFIA E PSICOTERAPIA. COM BASE EM UMA ANÁLISE EXISTENCIAL" Ele cunha a expressão "Análise Existencial". Frankl obtém um visto de imigração para os Estados Unidos, mas o deixa passar sem uso, não querendo abandonar seus velhos pais.</li>
         </ul>
         <blockquote
           cite="http://news.rediff.com/report/2009/sep/14/pm-pays-tribute-to-father-of-green-revolution-borlaug.htm"
