--- a/index.html
+++ b/index.html
@@ -33,26 +33,11 @@
             <li>1938: Invasão da Áustria pelas tropas de Hitler – o "Anschluss".</li>
             <li>1939: Em seu artigo: "FILOSOFIA E PSICOTERAPIA. COM BASE EM UMA ANÁLISE EXISTENCIAL" Ele cunha a expressão "Análise Existencial". Frankl obtém um visto de imigração para os Estados Unidos, mas o deixa passar sem uso, não querendo abandonar seus velhos pais.</li>
         </ul>
-        <blockquote
-          cite="http://news.rediff.com/report/2009/sep/14/pm-pays-tribute-to-father-of-green-revolution-borlaug.htm"
-        >
-          <p>
-            "Borlaug's life and achievement are testimony to the far-reaching
-            contribution that one man's towering intellect, persistence and
-            scientific vision can make to human peace and progress."
-          </p>
-          <cite>-- Indian Prime Minister Manmohan Singh</cite>
+        <blockquote>
+            "Tudo pode ser tirado de uma pessoa, exceto uma coisa: a liberdade de escolher sua atitude em qualquer circunstância da vida."
         </blockquote>
-        <h3>
-          If you have time, you should read more about this incredible human
-          being on his
-          <a
-            id="tribute-link"
-            href="https://en.wikipedia.org/wiki/Norman_Borlaug"
-            target="_blank"
-            >Wikipedia entry</a
-          >.
-        </h3>
+        
+        <h3 >Leia mais sobre a incrivel vida de Victor E. Frankl  na <a id="tribute-link" href="https://pt.wikipedia.org/wiki/Viktor_Frankl" target="_blank">Wikipedia</a>.</h3>
       </section>
     </main>
   </body>
