--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <main id="main">
       <h1 id="title">Viktor Emil Frankl</h1>
-      <p>"Tudo pode ser tirado de um homem, menos uma coisa: a última das liberdades humanas - escolher a atitude em qualquer conjunto de circunstâncias, escolher o próprio caminho" (Victor E. Frankl ).</p>
+      <p>"Tudo pode ser tirado de um homem, menos uma coisa: a última das liberdades humanas - <br> escolher a atitude em qualquer conjunto de circunstâncias, escolher o próprio caminho" (Victor E. Frankl ).</p>
       <figure id="img-div">
         <img id="image" src="https://s.ebiografia.com/img/vi/kt/viktor_frankl_purpose_of_life_c.jpg?auto_optimize=low&width=655">
       <figcaption id="img-caption">Viktor Emil Frankl foi um neuropsiquiatra austríaco e fundador da terceira escola vienense de psicoterapia, a Logoterapia e Análise Existencial.</figcaption>
@@ -14,7 +14,7 @@
         
       </figure>
       <section id="tribute-info">
-        <h2 id="headline">Abaixo, temos uma linha do tempo da vida de Frankl. É muito interessante o fato de que ele passou por tantas dificuldades, e ainda assim ser capaz de seguir em frente com sua vida; Encontrar felicidade e sucesso.</h2>
+        <h2 id="headline">Abaixo, temos uma linha do tempo da vida de Frankl. <br> </h2>
         <ul>
             <li>1905: Viktor Frankl nasceu em 26 de março, em Viena. Era o segundo de três filhos.</li>
             <li>1914-1918: Durante a Primeira Guerra Mundial, sua família experimenta amargas privações.</li>
